# dyad

./: CMakeLists.txt  Makefile.am  autoformat.sh  configure.ac
.github/workflows/: compile_test.yaml
docs/: conf.py  developer_guide.rst  getting_started.rst  publications.rst
docs/demos/ecp_feb_2023/: Makefile  cons.c  cons.cpp  cons.py  generation.h  prod.c  prod.cpp  prod.py
include/dyad/c_api/: dyad_c.h
include/dyad/client/: dyad_client.h
scripts/: autoformat.sh
spack/dyad/: package.py
spack/perfflow-aspect/: package.py
src/: Makefile.am
src/cmd/: dyad  dyad.c  utils.h
src/common/: dyad_flux_log.h
src/core/: Makefile.am  core.c  core.h  dyad_core.c  dyad_core.h  dyad_dtl_defs.h  dyad_err.h  dyad_open_dlwrap.c  dyad_open_dlwrap.h  dyad_rc.h
src/core/dtl/: Makefile.am  dyad_dtl.c  dyad_dtl.h  dyad_dtl_defs.h  flux_dtl.c  flux_dtl.h  mercury_dtl.c  mercury_dtl.h  ucx_dtl.c  ucx_dtl.h
src/cpp/: Makefile.am  dyad_ifstream.hpp  dyad_stream.hpp  dyad_stream_buf.hpp  dyad_stream_core.cpp
src/data_store/: object_metadata.cpp  object_metadata.hpp
src/dtl/: dyad_dtl.c  dyad_dtl.h  dyad_dtl_impl.h  dyad_rc.h  ucx_dtl.c
src/dyad/: dyad.c  dyad.h
src/dyad/c_api/: CMakeLists.txt  dyad_c.c
src/dyad/client/: CMakeLists.txt
src/dyad/core/: CMakeLists.txt  dyad_core.c
src/dyad/dtl/: dyad_dtl_impl.h  ucx_dtl.c  ucx_ep_cache.cpp
src/dyad/stream/: CMakeLists.txt  dyad_stream_core.cpp
src/dyad/wrapper/: CMakeLists.txt
src/kvs/: dyad_flux_kvs.c  dyad_flux_kvs.h  dyad_kvs.h  dyad_kvs_impl.c  dyad_kvs_impl.h
src/lib/: Makefile.am
src/module_lib/: dyad_file.c  dyad_modules.h
src/module_lib/dtl/: dyad_mod_dtl.c  dyad_mod_dtl.h
src/modules/: Makefile.am  dyad.c  dyad_ctx.h
src/modules/dtl/: Makefile.am  dyad_mod_dtl.c  dyad_mod_dtl.h  flux_mod_dtl.c  flux_mod_dtl.h  mercury_mod_dtl.c  mercury_mod_dtl.h  ucx_mod_dtl.c  ucx_mod_dtl.h
src/storage_graph/: Makefile.am  ingester_methods.h  storage_check.c  storage_check.h  storage_view.c  storage_view.h
src/storage_graph/ingesters/: ingester.c  ingester.h  linux_mounts_ingester.c  linux_mounts_ingester.h
src/stream/: Makefile.am  dyad_filebuf.hpp  dyad_fstream.hpp  dyad_fstream_core.hpp  dyad_ofstream.hpp  dyad_params.hpp  dyad_stream.hpp  dyad_stream_core.cpp  dyad_stream_core.hpp
src/urpc/: Makefile.am  urpc.c
src/utils/: Makefile.am  flux_b64.h  utils.c  utils.h
src/wrapper/: Makefile.am  wrapper.c
